--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,3 @@
-<h1>Welcome to ResourcesWelcome to Resources</h1>
+<h1>Welcome!</h1>
 
-<% if authenticated? %>
-
-
-<p>Welcome!Yourapplicationisup and running!</p>
-  <%= link_to "Log Out", session_path, data: { turbo_method: :delete } %>
-<% else %>
-  <%= link_to "Log In", new_session_path %>
-<% end %>
+<p>Are you ready to manage resources?</p>
