--- a/app/views/passwords/new.html.erb
+++ b/app/views/passwords/new.html.erb
@@ -1,8 +1,26 @@
 <h1>Forgot your password?</h1>
 
-<%= tag.div(flash[:alert], style: "color:red") if flash[:alert] %>
+<% if flash[:alert] %>
+  <div class="alert alert--error"><%= flash[:alert] %></div>
+<% end %>
 
-<%= form_with url: passwords_path do |form| %>
-  <%= form.email_field :email_address, required: true, autofocus: true, autocomplete: "username", placeholder: "Enter your email address", value: params[:email_address] %><br>
-  <%= form.submit "Email reset instructions" %>
+<% if flash[:notice] %>
+  <div class="alert alert--notice"><%= flash[:notice] %></div>
+<% end %>
+
+<%= form_with url: passwords_path, class: "form form--narrow" do |form| %>
+  <div class="form__field">
+    <%= form.label :email_address, "Email Address", class: "form__label" %>
+    <%= form.email_field :email_address,
+        required: true,
+        autofocus: true,
+        autocomplete: "username",
+        placeholder: "Enter your email address",
+        value: params[:email_address],
+        class: "form__input" %>
+  </div>
+
+  <div class="form__field">
+    <%= form.submit "Email reset instructions", class: "button button--primary" %>
+  </div>
 <% end %>
