Removes auth and makes concept anonymous

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,12 +29,7 @@
           <%= link_to "Resources", root_path, class: "header__brand-link" %>
         </div>
         <nav class="header__nav">
-          <% if authenticated? %>
-            <span class="header__welcome">Welcome!</span>
-            <%= link_to "Log Out", session_path, data: { turbo_method: :delete }, class: "header__link" %>
-          <% else %>
-            <%= link_to "Log In", new_session_path, class: "header__link" %>
-          <% end %>
+          <span class="header__welcome">Day <%= current_game.current_day %></span>
         </nav>
       </div>
     </header>
