--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,15 +27,19 @@
       <div class="header__container">
         <div class="header__brand">
           <%= link_to "Resources", root_path, class: "header__brand-link" %>
+          <div class="header__location">
+            <%= current_game.current_location.name %>
+          </div>
         </div>
         <%= render "shared/navbar" %>
         <nav class="header__nav">
+          <span class="header__cash">Cash: $<%= number_with_delimiter(current_game.cash.to_i) %></span>
           <span class="header__welcome">Day <%= current_game.current_day %></span>
         </nav>
       </div>
     </header>
 
-
+    <%= render "shared/flash" %>
 
     <main class="main">
       <%= yield %>
