--- a/app/views/travel/index.html.erb
+++ b/app/views/travel/index.html.erb
@@ -15,25 +15,27 @@
             <% if location %>
               <%
                 distance = current_game.current_location.distance_to(location)
-                cost = distance * 100
+                cost = distance <= 1 ? 0 : (distance - 1) * 100
+                cost_label = cost == 0 ? "Free" : "$#{cost}"
                 is_current_location = location.id == current_game.current_location_id
               %>
               <div class="location-card"
                    data-controller="travel-confirmation"
                    data-travel-confirmation-from-value="<%= current_game.current_location.name %>"
                    data-travel-confirmation-to-value="<%= location.name %>"
-                   data-travel-confirmation-cost-value="<%= cost %>">
+                   data-travel-confirmation-cost-value="<%= cost %>"
+                   data-travel-confirmation-cost-label-value="<%= cost_label %>">
                 <h2 class="location-card__name"><%= location.name %></h2>
                 <% if location.description.present? %>
                   <p class="location-card__description"><%= location.description %></p>
                 <% end %>
                 <% if is_current_location %>
-                  <%= button_tag "$#{cost}",
+                  <%= button_tag cost_label,
                       title: "Travel. Advances Day",
                       disabled: :disabled,
                       class: "travel-button travel-button--distance-#{distance}" %>
                 <% else %>
-                  <%= button_to "$#{cost}", travel_path,
+                  <%= button_to cost_label, travel_path,
                       params: { location_id: location.id },
                       method: :post,
                       title: "Travel. Advances Day",
