--- a/app/views/travel/index.html.erb
+++ b/app/views/travel/index.html.erb
@@ -35,6 +35,13 @@
                 <% if location.description.present? %>
                   <p class="location-card__description"><%= location.description %></p>
                 <% end %>
+                <% if location.tags.any? %>
+                  <div class="tags">
+                    <% location.tags.each do |tag| %>
+                      <span class="tag tag--<%= tag.name.gsub('_', '-') %>"><%= tag.name.gsub('_', ' ') %></span>
+                    <% end %>
+                  </div>
+                <% end %>
                 <div class="location-card__actions">
                   <% if is_current_location %>
                     <%= button_tag cost_label,
